fixed pagewrap height

--- a/src/views/main.css
+++ b/src/views/main.css
@@ -30,7 +30,7 @@ a:hover {
     align-items: center;
 }
 .pageWrap {
-    padding-top: 18%;
+    padding-top: 15%;
     padding-bottom: 5%;
     display: flex;
     justify-content: space-around;
